--- a/stylesheets/masterslider.css
+++ b/stylesheets/masterslider.css
@@ -18,12 +18,12 @@
 .master-slider h1, 
 .master-slider h2,
 .master-slider p {
-	font-size:96px;
-	font-family:"Roboto", Arial, sans-serif;
-	color:indigo;
+	font-size:45px;
+	font-family:'ADAM-CGPRO';
+	color:white;
 	font-weight:100;
-	width:100%;
-	text-shadow: 1px 1px 1px rgba(7, 7, 7, 0.1);
+    display:block;
+    width:initial;
 }
 
 .master-slider h2 {
@@ -31,9 +31,10 @@
 }
 
 .master-slider p {
-	font-size:17px;
+	font-size:25px;
 	font-weight:100;
 	line-height:35px;
+    letter-spacing:0.075em;
 }
 
 .master-slider .center {
@@ -119,7 +120,7 @@
 	width: 100%;
 }
 
-.ms-container {position: relative; margin:0 auto;}
+.ms-container { margin:0 auto;}
 .ms-slide .ms-slide-bgcont img , .ms-container{
 	-webkit-user-select:none;
 	-moz-user-select:none;
@@ -264,45 +265,40 @@
 	display:inline-block;
 	text-align:center;
 	position:absolute;
-	top:97%;
+	top:93%;
 	width:100%;
 	left:50%;
-	margin-left:-81px; /** Tweak to center buttons **/
+	margin-left:-45px; /** Tweak to center buttons **/
 }
 
 .ms-bullets.ms-dir-h .ms-bullet {
-	width:50px;
+	width:10px;
 	position:relative;
 	padding:0;
 	top:0;
 	left:0;
-	height:7px;
+	height:10px;
 	margin-right:6px;
-	border:2px solid rgba(255,255,255,0.65);
-	-webkit-border-radius: 7px;
-	-moz-border-radius: 7px;
-	border-radius: 7px;
+	border:3px solid rgba(255,255,255,0.65);
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	border-radius: 50%;
 	display:inline-block;
-}
-
-.ms-bullets.ms-dir-h .ms-bullet:hover {
-	border:2px solid rgba(255,255,255,1);
-}
-
-.ms-bullets.ms-dir-h .ms-bullet-selected {
-	border:0;
-	background:rgba(255,255,255,1.0);
-}
-
-.ms-bullets.ms-dir-h .ms-bullet-selected:hover {
-	background:rgba(255,255,255,1.0);
-	border:0;
-}
-
-.ms-bullets.ms-dir-h .ms-bullet {
-	-webkit-transition: all 700ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+    	-webkit-transition: all 700ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
 	-moz-transition: all 700ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
 	-ms-transition: all 700ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
 	-o-transition: all 700ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
 	transition: all 700ms cubic-bezier(0.230, 1.000, 0.320, 1.000); 	
+}
+
+.ms-bullets.ms-dir-h .ms-bullet:hover {
+	border:3px solid rgba(255,255,255,1);
+}
+
+.ms-bullets.ms-dir-h .ms-bullet-selected {
+	border:2px solid rgba(255,255,255,1);
+}
+
+.ms-bullets.ms-dir-h .ms-bullet-selected:hover {
+	border:2px solid rgba(255,255,255,1);
 }
