--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -29,8 +29,8 @@ h2{
 }
 h3{
     font-family:'ADAM-CGPRO';
-    margin-top: 28px;
-    margin-bottom: 18px;
+    margin-top: 33px;
+    margin-bottom: 31px;
     font-size: 22px;
     color: #263238;
     letter-spacing: 0.15em;
@@ -149,7 +149,7 @@ li.current a,.nav>li a:hover{
     display:block;
 }
 .slogan{
-    font-family:'Raleway-ExtraLight';
+    font-family:'Raleway-Light';
     color: #ab2b56;
     font-size: 20px;
     letter-spacing: 0.15em;
@@ -161,6 +161,9 @@ li.current a,.nav>li a:hover{
 .glass-img img,.showMore-img img{
     display:block;
     margin:0 auto;
+}
+.glass-title{
+    margin-bottom:18px;
 }
 .param{
     width:100%;
@@ -278,7 +281,7 @@ li.current a,.nav>li a:hover{
 /*---------discoProc---end-----*/
 /*---------aboutBrad-----------*/
 #aboutBrad{
-    margin-bottom:88px;
+    margin-bottom:47px;
 }
 .aboutTxt{
     font-family:'Raleway-Medium';
@@ -295,7 +298,7 @@ footer{
     border-top:1px solid #c53163;
     padding-top:22px;
     padding-bottom:22px;
-    font-family:'Raleway-Light';
+    font-family:'Raleway-Regular';
     font-size:11px;
     letter-spacing:0.025em;
     text-align:left;
