--- a/stylesheets/fonts.css
+++ b/stylesheets/fonts.css
@@ -17,12 +17,11 @@
     src: url('../fonts/Raleway-Light/Raleway-Light.woff') format('woff'), url('../fonts/Raleway-Light/Raleway-Light.ttf') format('truetype'), url('../fonts/Raleway-Light/Raleway-Light.eot') format('embedded-opentype');
 }
 @font-face {
-    font-family: 'Raleway-Medium';
-    src: url('../fonts/Raleway-Medium/Raleway-Medium.woff') format('woff'), url('../fonts/Raleway-Medium/Raleway-Medium.ttf') format('truetype'), url('../fonts/Raleway-Medium/Raleway-Medium.eot') format('embedded-opentype');
-}
-@font-face {
     font-family: 'Raleway-Regular';
     src: url('../fonts/Raleway-Regular/Raleway-Regular.woff') format('woff'), url('../fonts/Raleway-Regular/Raleway-Regular.ttf') format('truetype'), url('../fonts/Raleway-Regular/Raleway-Regular.eot') format('embedded-opentype');
+}@font-face {
+    font-family: 'Raleway-Medium';
+    src: url('../fonts/Raleway-Medium/Raleway-Medium.woff') format('woff'), url('../fonts/Raleway-Medium/Raleway-Medium.ttf') format('truetype'), url('../fonts/Raleway-Medium/Raleway-Medium.eot') format('embedded-opentype');
 }
 @font-face {
     font-family: 'Roboto-Light';
