--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -318,6 +318,9 @@ footer{
 .botMargin2{
         margin-bottom:77px;
 }
+.foot-info-txt{
+    letter-spacing:0.15em
+}
 .foot-cont-txt{
     font-size:12px;
     margin-bottom:29px;
