--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -168,6 +168,7 @@ li.current a,.nav>li a:hover{
 }
 .glass-title{
     margin-bottom:18px;
+    font-size:1.571em;
 }
 .param{
     width:100%;
@@ -266,12 +267,22 @@ li.current a,.nav>li a:hover{
 .subInput{
     width: 75%;
     height: 35px;
+    padding-left:1.286em;
+    color:#263238
 }
 .subBtn{
+    background-color: #ffffff;
     height: 35px;
+    border: 0;
     margin-left: 4%;
     width: 20%;
+    font-family:'Raleway-Light';
+    font-size:1.286em;
+    letter-spacing:0.06em
 }
+.subInput::-webkit-input-placeholder     {color:#dcdcdc; letter-spacing:0.06em} 
+.subInput:-moz-placeholder      {color:#dcdcdc; letter-spacing:0.06em} 
+.subInput:-ms-input-placeholder {color:#dcdcdc; letter-spacing:0.06em}   
 /*---------subscr------end-----*/
 /*---------discoProc-----------*/
 #discoProc{
@@ -303,7 +314,7 @@ footer{
     padding-top:22px;
     padding-bottom:22px;
     font-family:'Raleway-Regular';
-    font-size:0.786em;
+    font-size:0.857em;
     letter-spacing:0.025em;
     line-height:24px;
     color:#455a64;
@@ -317,9 +328,6 @@ footer{
 }
 .foot-info-txt{
     letter-spacing:0.15em
-}
-.foot-cont-txt{
-    font-size:0.857em;
 }
 /*----------Footer-----end-----*/
 /*---------Adaptive styles section--------------*/
@@ -347,9 +355,9 @@ footer{
     .Mobile{display:none;}
     .Desktop{display:inline-block;}
     .lang-cont{margin: 48px 0 42px 0;font-size: 0.5em;letter-spacing:0}
-    .navbar-collapse{height:102px;overflow-x:visible}
+    .navbar-collapse{height:102px;overflow:hidden}
         li.current{border-bottom: 3px solid #c53163;}
-        .expand{height:102px;overflow-x:visible}
+        .expand{height:102px;overflow:hidden}
 }
 @media(min-width:993px){
     .nav>li{margin:0 15px;}
