--- a/stylesheets/header_footer.css
+++ b/stylesheets/header_footer.css
@@ -9,6 +9,17 @@
 body {
     margin:0;
 }
+h1{
+    font-family:'ADAM-CGPRO';
+    font-size: 2.357em;
+    color: #263238;
+    letter-spacing: 0.0075em;
+    text-transform: uppercase;
+    width: 100%;
+    text-align: center;
+    margin-top: 39px;
+    margin-bottom: 31px;
+}
 h2{
     font-family:'ADAM-CGPRO';
     font-size: 2.357em;
@@ -65,13 +76,9 @@ li.current{
     border-bottom: 3px solid #c53163;
 }
 li.current a,.nav>li a:hover{
-    color:#c53163!important;
+    color:#c53163;
 }
-.dropdown-menu{
-    background-color:#263238;
-    padding:0;
 
-}
 .dropdown-menu>li>a{
     padding:16px 71px 16px 5px;
     color:#ffffff;
@@ -79,6 +86,10 @@ li.current a,.nav>li a:hover{
 .dropdown-menu>li>a:hover{
     background-color:#ffffff;
     color:#263238;
+}
+.dropdown-menu>li:hover{
+    background-color:#ffffff;
+    color:#c53163;
 }
 .lang-cont{
     display: inline-block;
@@ -136,9 +147,9 @@ footer{
     ul.navbar-nav{margin-left:0;}
     .lang-cont{margin: 42px 0 0 15%;font-size: 1em;letter-spacing:0.025em}
     .Mobile{display:inline-block;}
-    .Desktop{display:none;}
+    .Desktop,.Desktop-block{display:none;}
     body{font-size:12px}
-    .navbar-collapse{height:0}
+    .navbar-collapse{height:0;overflow: hidden;}
     li.current{border-bottom:0}
     .expand{height:405%}
 }
@@ -149,17 +160,19 @@ footer{
     .foot-cont-txt{margin-bottom:29px;}
     .Mobile{display:none;}
     .Desktop{display:inline-block;}
+    .Desktop-block{display:block;}
     .lang-cont{margin: 48px 0 0 0;font-size: 0.5em;letter-spacing:0}
-    .navbar-collapse{height:102px}
+    .navbar-collapse{height:102px;overflow: visible;}
         li.current{border-bottom: 3px solid #c53163;}
         .expand{height:102px}
+        .dropdown-menu{background-color:#263238;padding:0;border:1px solid transparent;width:100%}
 }
 @media(min-width:993px){
     .nav>li{margin:0 15px;}
     ul.navbar-nav{margin-left:45px;}
     .lang-cont{margin: 42px 0 0 9%;font-size: 1em;letter-spacing:0.025em}
     body{font-size:14px}
-
+    .dropdown-menu{background-color:#263238;padding:0;border:1px solid transparent;}
 }
 @media(min-width:1201px){    
     .nav>li{margin:0 36px;}
