--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -157,7 +157,7 @@
     margin-bottom:37px;
     letter-spacing:0.1em;
 }
-#subscribeForm{
+.subscribeForm{
     width:70%;
     margin:0 auto;
     margin-bottom:27px;
