--- a/stylesheets/contact.css
+++ b/stylesheets/contact.css
@@ -30,16 +30,17 @@
     text-transform: uppercase;
     margin-bottom: 33px;
 }
-input[type=text], input[type=email] {
+input[type=text], input[type=email],textarea {
     height: 45px;
     border: 1pt solid #b0bec5;
     padding: 16px 0 16px 19px;
     width: 100%;
     margin:6px 0;
 }
+textarea{max-width:100%;min-height:147px;}
 label{font-weight:100;}
 /*classes for label*/
-input.placeholderimit + label.placeholderobj{
+input.placeholderimit + label.placeholderobj,textarea.placeholderimit + label.placeholderobj{
     font-family:'Raleway-Light';
     font-size:1em;
     letter-spacing:0.06em;
@@ -50,7 +51,7 @@ input.placeholderimit + label.placeholderobj{
     top:17px;
     left:19px;
 }
-input.placeholderimit + label.placeholderobj:after{
+input.placeholderimit + label.placeholderobj:after,textarea.placeholderimit + label.placeholderobj:after{
     content:'*';
     color:#c53163;
 }
@@ -137,4 +138,29 @@ input[type=radio]:checked + label:after,input[type=checkbox]:checked + label:aft
   opacity:1
 }
 .no-paddings div{padding:0}
+#mce-responses {
+    position: fixed;
+    bottom: 40px;
+    margin: 0 auto;
+    z-index: 5;
+    text-align: center;
+    left: 50%;
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
+}
+#mc_embed_signup div.response {
+    font-family:'Raleway-Light';
+    z-index: 5;
+    padding: 5px 28px;
+    margin: 0 auto;
+    text-align: center;
+    line-height: 60px;
+    font-size: 32px;
+    background: rgba(0,0,0,.7);
+    color: white;
+    overflow:hidden;
+}
 /*---------ContactForm----end-------*/
