--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -178,7 +178,7 @@ h2.ms-layer{
     height: 35px;
     padding:0 0 0 1.286em;
     color: #263238;
-    border: 0;
+    border: 2px solid white;
     position: relative;
     font-family:'Raleway-Regular';
     font-size:1em;
@@ -218,7 +218,32 @@ h2.ms-layer{
     display:block;
     color:#ffffff;
     margin-bottom:16px
-} 
+}
+#mce-responses {
+    position: fixed;
+    bottom: 40px;
+    margin: 0 auto;
+    z-index: 5;
+    text-align: center;
+    left: 50%;
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
+}
+#mc_embed_signup div.response {
+    font-family:'Raleway-Light';
+    z-index: 5;
+    padding: 5px 28px;
+    margin: 0 auto;
+    text-align: center;
+    line-height: 60px;
+    font-size: 32px;
+    background: rgba(0,0,0,.7);
+    color: white;
+    overflow:hidden;
+}
 /*---------subscr------end-----*/
 /*---------discoProc-----------*/
 #discoProc{
