--- a/stylesheets/contact.css
+++ b/stylesheets/contact.css
@@ -183,4 +183,9 @@ input[type=radio]:checked + label:after,input[type=checkbox]:checked + label:aft
         line-height:24px;
 }
 .qr{position: relative;bottom: -20px;}
+.newstxt{
+    font-family:'Raleway-Light';
+    font-size:12px;
+    color:#263238;
+}
 /*---------ContactForm----end-------*/
