--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -51,6 +51,26 @@
 h2.ms-layer{
     width:auto;
 }
+.gravomega{
+    font-family:'Raleway-ExtraLight'!important;
+    font-size:62px!important;
+
+}
+.tableP{
+    font-family:'ADAM.CG PRO'!important;
+    font-size:25px!important;
+    letter-spacing:0.055em!important;
+}
+.tableP2{    
+    font-family:'Raleway-Light'!important;
+    font-size:20px!important;
+    letter-spacing:0.150em!important;}
+.tableH2{
+    font-family:'Raleway-Light'!important;
+    font-size:50px!important;
+    letter-spacing:0.054em!important;
+
+}
 /*---------mainSlider----end-------*/
 /*---------zaltoGlassware--------------*/
 .zaltoGlassware{
