--- a/stylesheets/contact.css
+++ b/stylesheets/contact.css
@@ -187,5 +187,8 @@ input[type=radio]:checked + label:after,input[type=checkbox]:checked + label:aft
     font-family:'Raleway-Light';
     font-size:12px;
     color:#263238;
+    display:block;
+    height:54px;
+    line-height:54px;
 }
 /*---------ContactForm----end-------*/
